change in html and css

--- a/index.HTML
+++ b/index.HTML
@@ -3,35 +3,112 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Uniform Adda</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Responsive Navbar</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
-  <nav class="navbar">
-   
-    <div class="menu-toggle" id="menu-toggle">
-      <i class="fa-solid fa-bars"></i>
-    </div>
-     <div>
-    <div class="logo">
-      <a href="#">BrandLogo</a>
-    </div>
-    
-      <div class="search-login">
-        <input type="text" class="search-bar" placeholder="Search...">
-        <button class="login-btn">Login</button>
+  <!-- Starting of header -->
+  <header>
+    <p id="context">Uniforms are the way to represent us! Contact Us at +9264931896</p>
+    <nav>
+      <div class="nav">
+        <div class="logo">
+          <p>Uniform Adda</p>
+        </div>
+        <div class="search-box">
+          <input type="text" placeholder="Search...">
+          <button>Shop</button>
+        </div> 
       </div>
-   </div>
-      <div>
-        <ul class="nav-links" id="nav-links">
+      <div class="tags">
+        <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Schools</a></li>
+          <li><a href="#">Uniforms</a></li>
+          <li><a href="#">Track Order</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#" class="btn login">Login</a></li>
         </ul>
-      </div> 
-  </nav>
- <h1>uidjfbgshdbvdjv dipuf</h1>
-</body>
-</html>
+      </div>
+    </nav>
+  </header>
+  <!-- End of header -->
+
+  <!-- Starting of main  -->
+  <main>
+    <!-- home start -->
+      <section class="home">  
+       <div class="box">
+        <div class="image">
+          <img src="images/Welcome_to_Gubbacci_Uniform_1900x700.webp" alt="">
+        </div>
+       </div>     
+      </section> 
+    <!--  home end -->
+
+    <!-- starting of schools -->
+    <section class="school">
+      <div class="school-box">
+        <article class="school-card" >
+          <div class="school-img">
+            <a href=""><img src="images/sds.png" alt="St. Dominic Savio School Logo"></a>
+          </div>
+          <div class="school-name">
+            <a href=""><p>St. Dominic Savio School</p></a>
+          </div>
+        </article>
+        <article class="school-card">
+          <div class="school-img">
+            <a href=""><img src="images/sdps 2.jpg" alt="SDPS International School Logo"></a>"
+          </div>
+          <div class="school-name">
+            <a href=""><p>SDPS International School</p></a>
+          </div>
+        </article>
+        <article class="school-card">
+          <div class="school-img">
+            <a href=""><img src="images/Modern-Public-School-Lalitpur.png" alt="Modern Public School Logo"></a>
+          </div>
+          <div class="school-name">
+            <a href=""><p>Modern Public School</p></a>
+          </div>
+        </article>
+        <article class="school-card">
+          <div class="school-img">
+            <a href=""><img src="images/mahes.jpeg" alt="Maheswari Academy Logo"></a>
+          </div>
+          <div class="school-name">
+            <a href=""><p>Maheshwari Academy</p></a>
+          </div>
+        </article>
+        <article class="school-card">
+          <div class="school-img">
+            <a href=""><img src="images/rlps.jpeg" alt="Rani Laxmi Bai Public School Logo"></a>
+          </div>
+          <div class="school-name">
+           <a href=""><p>Rani Laxmi Bai Public School</p></a>
+          </div>
+        </article>
+        <article class="school-card">
+          <div class="school-img">
+            <a href=""><img src="images/don.jpeg" alt="Don Bosco Academy Logo"></a>
+          </div>
+          <div class="school-name">
+            <a href=""><p>Don Bosco Academy</p></a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!-- end of schools -->
+  </main>
+
+  <!-- End of main content -->
+
+  <!-- starting of footer  -->
+   <footer >
+    
+   </footer>
+  <!-- end of fottter -->
+
