--- a/index.HTML
+++ b/index.HTML
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uniform Adda</title>
+  <script src="https://kit.fontawesome.com/2616bc9d69.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
@@ -42,7 +43,7 @@
       <section class="home">  
        <div class="box">
         <div class="image">
-          <img src="images/Welcome_to_Gubbacci_Uniform_1900x700.webp" alt="">
+          <img src="images/Screenshot 2024-12-16 220612.png" alt="">
         </div>
        </div>     
       </section> 
@@ -107,8 +108,43 @@
   <!-- End of main content -->
 
   <!-- starting of footer  -->
-   <footer >
-    
-   </footer>
+  <footer class="footer">
+    <div class="content">
+        <h3>Why Choose Us</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+        <div class="share">
+        
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </div>
+    <div class="link">
+        <h3>Links</h3>
+        <a href="#home">Home</a>
+        <a href="#school">School</a>
+        <a href="#gallery">Uniform</a>
+        <a href="#treak order">Track Order</a>
+        <a href="#contact">Contact Us</a>
+        <a href="#about us">About Us</a>
+    </div>
+
+    <div>
+        <h3>POLICIES</h3>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Return Policy</a>
+        <a href="#">Shipping Policy</a>
+        <a href="#">Refund Policy</a>
+        <a href="#">Cancellatons</a>
+        <a href="#">Payments</a>
+    </div>
+    <div class="ournews">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+    </div>
+   
+ </footer>
+  <div class="footer-right"><p>2024@copyright aadeesh jain</p></div>
   <!-- end of fottter -->
 
