--- a/index.HTML
+++ b/index.HTML
@@ -41,65 +41,81 @@
   <main>
     <!-- home start -->
       <section class="home">  
-       <div class="box">
         <div class="image">
-          <img src="images/Screenshot 2024-12-16 220612.png" alt="">
-        </div>
-       </div>     
+          <img src="images/We Chose Private School.jpeg"alt="this is an image">
+        </div>    
       </section> 
     <!--  home end -->
+
+    <!-- starting of drees -->
+
+    <section class="section">
+      <div class="items">
+          <div class="item">
+              <img src="images/IMG-20241217-WA0093.jpg" alt="">
+          </div>
+          <div class="item">
+              <img src="images/IMG-20241217-WA0097.jpg" alt="">
+          </div>
+          <div class="item">
+              <img src="images/IMG-20241217-WA0096.jpg" alt="">
+          </div>
+      </div>
+  </section>
+
+    <!-- end of drees -->
 
     <!-- starting of schools -->
     <section class="school">
       <div class="school-box">
-        <article class="school-card" >
+        <div class="school-card" >
           <div class="school-img">
             <a href=""><img src="images/sds.png" alt="St. Dominic Savio School Logo"></a>
           </div>
           <div class="school-name">
             <a href=""><p>St. Dominic Savio School</p></a>
           </div>
-        </article>
-        <article class="school-card">
+        </div>
+        <div class="school-card">
           <div class="school-img">
             <a href=""><img src="images/sdps 2.jpg" alt="SDPS International School Logo"></a>"
           </div>
           <div class="school-name">
             <a href=""><p>SDPS International School</p></a>
           </div>
-        </article>
-        <article class="school-card">
+        </div>
+        <div class="school-card">
           <div class="school-img">
             <a href=""><img src="images/Modern-Public-School-Lalitpur.png" alt="Modern Public School Logo"></a>
           </div>
           <div class="school-name">
             <a href=""><p>Modern Public School</p></a>
           </div>
-        </article>
-        <article class="school-card">
+        </div>
+        <div class="school-card">
           <div class="school-img">
             <a href=""><img src="images/mahes.jpeg" alt="Maheswari Academy Logo"></a>
           </div>
           <div class="school-name">
             <a href=""><p>Maheshwari Academy</p></a>
           </div>
-        </article>
-        <article class="school-card">
+        </div>
+        <div class="school-card">
           <div class="school-img">
             <a href=""><img src="images/rlps.jpeg" alt="Rani Laxmi Bai Public School Logo"></a>
           </div>
           <div class="school-name">
            <a href=""><p>Rani Laxmi Bai Public School</p></a>
           </div>
-        </article>
-        <article class="school-card">
+        </div>
+        <div class="school-card">
           <div class="school-img">
             <a href=""><img src="images/don.jpeg" alt="Don Bosco Academy Logo"></a>
           </div>
           <div class="school-name">
             <a href=""><p>Don Bosco Academy</p></a>
           </div>
-        </article>
+        </div>
       </div>
     </section>
     <!-- end of schools -->
@@ -111,9 +127,8 @@
   <footer class="footer">
     <div class="content">
         <h3>Why Choose Us</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p><br>
         <div class="share">
-        
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-youtube"></i>
