change in html and css

--- a/index.HTML
+++ b/index.HTML
@@ -24,8 +24,8 @@
       </div>
       <div class="tags">
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Schools</a></li>
+          <li><a href="index.HTML">Home</a></li>
+          <li><a href="school.html">Schools</a></li>
           <li><a href="#">Uniforms</a></li>
           <li><a href="#">Track Order</a></li>
           <li><a href="#">About Us</a></li>
@@ -42,7 +42,7 @@
     <!-- home start -->
       <section class="home">  
         <div class="image">
-          <img src="images/We Chose Private School.jpeg"alt="this is an image">
+          <img src="images/IMG_20241218_224931_552.jpg"alt="this is an image">
         </div>    
       </section> 
     <!--  home end -->
@@ -67,6 +67,7 @@
 
     <!-- starting of schools -->
     <section class="school">
+      <h2>Esteemed School Networks</h2>
       <div class="school-box">
         <div class="school-card" >
           <div class="school-img">
@@ -78,7 +79,7 @@
         </div>
         <div class="school-card">
           <div class="school-img">
-            <a href=""><img src="images/sdps 2.jpg" alt="SDPS International School Logo"></a>"
+            <a href=""><img src="images/sdps 2.jpg" alt="SDPS International School Logo"></a>
           </div>
           <div class="school-name">
             <a href=""><p>SDPS International School</p></a>
@@ -162,4 +163,5 @@
  </footer>
   <div class="footer-right"><p>2024@copyright aadeesh jain</p></div>
   <!-- end of fottter -->
-
+  
+</body>
