--- a/index.HTML
+++ b/index.HTML
@@ -15,23 +15,23 @@
     <nav>
       <div class="flex justify-between items-center px-3 py-4">
         <div>
-          <p class="text-2xl font-bold text-red-400 w">Uniform Adda</p>
+          <p  class="text-2xl font-bold text-red-400 w"> <a href="index.html">Uniform Adda</a> </p>
         </div>
         <div class="flex gap-3 w-10/12">
           <input class="p-2 bg-blue-200 text-black rounded w-full" type="text"placeholder="Search... ">
           <button class="bg-red-400 text-white px-2 py-4 rounded cursor-pointer hover:text-red-400">Shop</button>
         </div> 
       </div>
-      <div class="bg-sky-900">
-        <ul class=" flex justify-center gap-5 p-3">
-          <li class="list-none"><a href="index.HTML" class="no-underline hover:text-red-400">Home</a></li>
+      <div class="bg-sky-900 " >
+        <ul class=" list-none flex justify-center gap-5 p-3" id="nav-links">
+          <li><a href="index.HTML" class="no-underline hover:text-red-400">Home</a></li>
           <li><a href="school.html" class="no-underline hover:text-red-400" >School</a></li>
           <li><a href="dress.html" class="no-underline hover:text-red-400">Uniforms</a></li>
           <li><a href="#" class="no-underline hover:text-red-400">Track Order</a></li>
           <li><a href="about.html" class="no-underline hover:text-red-400">About Us</a></li>
           <li><a href="contact.html" class="no-underline hover:text-red-400">Contact Us</a></li>
           <li><a href="login.html" class="no-underline hover:text-red-400">Login</a></li>
-        </ul>
+        </ul>  
       </div>
     </nav>
   </header>
@@ -47,8 +47,10 @@
 
     <!-- starting of drees -->
 
-    <section class="section">
+    <section class="section bg-sky-900">
+       <h2 class="text-white  text-center p-4 font-serif text-2xl ">Head To Toe</h2>
       <div class="items">
+       
           <div class="item">
               <img src="images/IMG-20241217-WA0093.jpg" alt="">
           </div>
@@ -123,8 +125,8 @@
   <!-- End of main content -->
 
   <footer>
-    <div class="h-80 grid gap-5 bg-sky-900 text-white p-5 grid-cols-4">
-      <div class="content">
+    <div id="contents" class="h-80 grid gap-5 bg-sky-900 text-white p-5 grid-cols-4">
+      <div class="contents">
           <h3 class="text-red-400 text-center mb-3 text-xl">Why Choose Us</h3>
           <p class="text-center text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing.</p><br>
           <div class="text-2xl text-center">
@@ -134,7 +136,7 @@
               <i class="fa-brands fa-twitter cursor-pointer  p-2"></i>
           </div>
       </div>
-      <div class="link">
+      <div class="contents">
           <h3 class="text-red-400 text-center mb-3 text-xl">Links</h3>
           <a class="hover:text-red-400 block text-center text-lg no-underline" href="#home">Home</a>
           <a class="hover:text-red-400 block text-center text-lg no-underline"href="#school">School</a>
@@ -144,7 +146,7 @@
           <a class="hover:text-red-400 block text-center text-lg no-underline"href="#about us">About Us</a>
       </div>
   
-      <div>
+      <div class="contents">
           <h3 class="text-red-400 text-center mb-3 text-xl">POLICIES</h3>
           <a class="block text-center text-lg no-underline hover:text-red-400" href="#">Privacy Policy</a>
           <a class="block text-center text-lg no-underline hover:text-red-400" href="#">Return Policy</a>
@@ -153,7 +155,7 @@
           <a class="block text-center text-lg no-underline hover:text-red-400" href="#">Cancellatons</a>
           <a class="block text-center text-lg no-underline hover:text-red-400" href="#">Payments</a>
       </div>
-      <div class="ournews">
+      <div class="contents">
           <h3 class="text-red-400 text-center mb-3 text-xl">About Us</h3>
           <p class="text-center text-lg">Lorem ipsum dolor sit amet consectetur.</p>
       </div>
