--- a/index.HTML
+++ b/index.HTML
@@ -23,7 +23,7 @@
         </div> 
       </div>
       <div class="bg-sky-900 " >
-        <ul class=" list-none flex justify-center gap-5 p-3" id="nav-links">
+        <ul id="ul" class=" list-none flex justify-center gap-5 p-3" >
           <li><a href="index.HTML" class="no-underline hover:text-red-400">Home</a></li>
           <li><a href="school.html" class="no-underline hover:text-red-400" >School</a></li>
           <li><a href="dress.html" class="no-underline hover:text-red-400">Uniforms</a></li>
