--- a/dress.html
+++ b/dress.html
@@ -23,7 +23,7 @@
         </div> 
       </div>
       <div class="bg-sky-900 " >
-        <ul class=" list-none flex justify-center gap-5 p-3" id="nav-links">
+        <ul id="ul" class=" list-none flex justify-center gap-5 p-3" id="nav-links">
           <li><a href="index.HTML" class="no-underline hover:text-red-400">Home</a></li>
           <li><a href="school.html" class="no-underline hover:text-red-400" >School</a></li>
           <li><a href="dress.html" class="no-underline hover:text-red-400">Uniforms</a></li>
@@ -40,7 +40,7 @@
    <!-- starting of main body -->
 
    <body>
-    <section>
+    <section class="section" >
       <div class="w-full h-40 bg-sky-200 flex justify-between">
         <div class="text-4xl font-serif px-36 py-16">
           <h1>Uniforms...</h1>
@@ -136,7 +136,7 @@
      <!-- Main Content -->
       <main class="w-full h-auto bg-sky-200 text-white p-3 flex flex-wrap justify-center  gap-3">
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -163,7 +163,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -190,7 +190,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -208,7 +208,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -217,7 +217,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -226,7 +226,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -235,7 +235,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -244,7 +244,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -253,7 +253,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -271,7 +271,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -280,7 +280,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -289,7 +289,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -298,7 +298,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
@@ -307,7 +307,7 @@
           </div>
         </div>
         <div class="">
-          <div class="">
+          <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
           <div class=" text-black text-center p-1">
