--- a/dress.html
+++ b/dress.html
@@ -57,7 +57,7 @@
     </section>
 
     <section class="flex">
-      <aside class="w-1/4 h-full bg-sky-200 p-3 sticky top-0">
+      <div id="aside" class="w-1/4 h-full bg-sky-200 p-3 sticky top-0">
         <ul class="p-3 flex flex-col gap-4">
           <li class=" text-center ">
             <select class="w-4/5 p-5 font-bold bg-inherit" name=" Size" id="Size">
@@ -131,11 +131,11 @@
             </select> 
           </li>
         </ul>
-      </aside>
+      </div>
 
      <!-- Main Content -->
-      <main class="w-full h-auto bg-sky-200 text-white p-3 flex flex-wrap justify-center  gap-3">
-        <div class="">
+      <div class="w-full h-auto bg-sky-200 text-white p-3 flex flex-wrap justify-center  gap-3">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -144,7 +144,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -153,7 +153,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -162,7 +162,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -171,7 +171,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -180,7 +180,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -189,7 +189,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -198,7 +198,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -207,7 +207,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -216,7 +216,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -225,7 +225,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -234,7 +234,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -243,7 +243,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -252,7 +252,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -261,7 +261,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -270,7 +270,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -279,7 +279,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -288,7 +288,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -297,7 +297,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -306,7 +306,7 @@
              <p class=""> rs 500</p>
           </div>
         </div>
-        <div class="">
+        <div class="my">
           <div class="pic">
              <a href="#"><img class="w-full p-4" src="images/download.jpeg" alt=""></a>
           </div>
@@ -316,7 +316,7 @@
           </div>
         </div>
         
-      </main>
+      </div>
     </section>
    </body>
     
